@@ -1608,6 +1608,9 @@ class DataDocumenter(ModuleLevelDocumenter):
             # obtain annotation for this data
             try:
                 annotations = get_type_hints(self.parent)
+            except NameError:
+                # Failed to evaluate ForwardRef (maybe TYPE_CHECKING)
+                annotations = safe_getattr(self.parent, '__annotations__', {})
             except TypeError:
                 annotations = {}
             except KeyError:
@@ -1984,6 +1987,9 @@ class AttributeDocumenter(DocstringStripSignatureMixin, ClassLevelDocumenter):  
             # obtain type annotation for this attribute
             try:
                 annotations = get_type_hints(self.parent)
+            except NameError:
+                # Failed to evaluate ForwardRef (maybe TYPE_CHECKING)
+                annotations = safe_getattr(self.parent, '__annotations__', {})
             except TypeError:
                 annotations = {}
             except KeyError:
